--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -6,11 +6,18 @@ ion-content{
     --background: #202020;
 }
 
+h1 {
+    text-align: center;
+    font-size: 100px;
+    color: #56A88A;
+    margin-top: 20%;
+}
+
 ion-card {
    // text-align: center;
     width: 70%;
     height: 350px;
-    margin-top: 20%;
+    margin-top: 5%;
     margin-left: 15%;
     margin-right: 15%;
     background-color: #f7f7f7;
