--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -5,6 +5,6 @@
 </ion-header>
 
 <ion-content>
-<p>User Pin : {{user.pin}}</p>
+<p>Hi {{userData.firstname}}!</p>
 <p>Truck ID : {{user.truck}}</p>
 </ion-content>
