--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -16,7 +16,7 @@ h1 {
 ion-card {
    // text-align: center;
     width: 70%;
-    height: 350px;
+    height: 320px;
     margin-top: 5%;
     margin-left: 15%;
     margin-right: 15%;
@@ -36,6 +36,14 @@ ion-input {
     height: 20%;
     width: 100%;
     font-size: 30px;
+
+}
+
+.tutorialButton {
+    width: 65%;
+    margin-left: 17.5%;
+    margin-right: 17.5%;
+    margin-top: 10%;
 
 }
 
