precheckup layout adjustments

--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -36,7 +36,7 @@
         <ion-card>
             <ion-item>
                 <ion-checkbox color="primary" slot="end"></ion-checkbox>
-                <ion-label>Engine</ion-label>
+                <ion-label class="custom-card-label">Engine</ion-label>
               </ion-item>
             <ion-card-content>
                 <ion-list>
@@ -63,20 +63,20 @@
           <ion-card>
               <ion-item>
                   <ion-checkbox color="primary" slot="end"></ion-checkbox>
-                  <ion-label>Engine</ion-label>
+                  <ion-label class="custom-card-label">Fork</ion-label>
                 </ion-item>
               <ion-card-content>
                   <ion-list>
                       <ion-item>
-                        <ion-label>Loud noises</ion-label>
+                        <ion-label>Fork bent</ion-label>
                         <ion-checkbox slot="start"></ion-checkbox>
                       </ion-item>
                       <ion-item>
-                        <ion-label>Does not turn on</ion-label>
+                        <ion-label>Fork missing</ion-label>
                         <ion-checkbox slot="start"></ion-checkbox>
                       </ion-item>
                       <ion-item>
-                        <ion-label>Oil is leeking</ion-label>
+                        <ion-label>Fork does not move</ion-label>
                         <ion-checkbox slot="start"></ion-checkbox>
                       </ion-item>
                       <ion-item>
@@ -90,20 +90,16 @@
             <ion-card>
                 <ion-item>
                     <ion-checkbox color="primary" slot="end"></ion-checkbox>
-                    <ion-label>Engine</ion-label>
+                    <ion-label class="custom-card-label">Bodywork</ion-label>
                   </ion-item>
                 <ion-card-content>
                     <ion-list>
                         <ion-item>
-                          <ion-label>Loud noises</ion-label>
+                          <ion-label>Scratch in bodywork</ion-label>
                           <ion-checkbox slot="start"></ion-checkbox>
                         </ion-item>
                         <ion-item>
-                          <ion-label>Does not turn on</ion-label>
-                          <ion-checkbox slot="start"></ion-checkbox>
-                        </ion-item>
-                        <ion-item>
-                          <ion-label>Oil is leeking</ion-label>
+                          <ion-label>Body work bent</ion-label>
                           <ion-checkbox slot="start"></ion-checkbox>
                         </ion-item>
                         <ion-item>
@@ -114,37 +110,10 @@
                 </ion-card-content>
               </ion-card>
 
-              <ion-card>
-                  <ion-item>
-                      <ion-checkbox color="primary" slot="end"></ion-checkbox>
-                      <ion-label>Engine</ion-label>
-                    </ion-item>
-                  <ion-card-content>
-                      <ion-list>
-                          <ion-item>
-                            <ion-label>Loud noises</ion-label>
-                            <ion-checkbox slot="start"></ion-checkbox>
-                          </ion-item>
-                          <ion-item>
-                            <ion-label>Does not turn on</ion-label>
-                            <ion-checkbox slot="start"></ion-checkbox>
-                          </ion-item>
-                          <ion-item>
-                            <ion-label>Oil is leeking</ion-label>
-                            <ion-checkbox slot="start"></ion-checkbox>
-                          </ion-item>
-                          <ion-item>
-                              <ion-label position="floating">Other</ion-label>
-                              <ion-input placeholder="Please enter details" clear-input="true"></ion-input>
-                          </ion-item>
-                        </ion-list>
-                  </ion-card-content>
-                </ion-card>
-
                 <ion-card>
                     <ion-item>
                         <ion-checkbox color="primary" slot="end"></ion-checkbox>
-                        <ion-label>Other</ion-label>
+                        <ion-label class="custom-card-label">Other</ion-label>
                       </ion-item>
                     <ion-card-content>
                         <ion-label position="floating">Comment</ion-label>
