--- a/src/app/pages/precheck/precheck.page.scss
+++ b/src/app/pages/precheck/precheck.page.scss
@@ -16,6 +16,10 @@ ion-card {
     background-color: #A2CFBF;
 }
 
+.custom-card-label {
+    font-size: 25px;
+}
+
 p {
     margin-bottom: 15px;
     font-size: 15px;
