add sidemenu navigation after precheckup

--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -121,6 +121,6 @@
                     </ion-card-content>
                   </ion-card>
 
-                  <ion-button expand="block">Continue</ion-button>
+                  <ion-button (click)="goToOrders()" expand="block">Continue</ion-button>
 
 </ion-content>
