add tutorial dummy screens

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -29,7 +29,7 @@
           </ion-card-content>
       </ion-card>
 
-      <ion-button class="tutorialButton" expand="block" fill="outline">Tutorial</ion-button>
+      <ion-button class="tutorialButton" (click)="goToTutorial()" expand="block" fill="outline">Tutorial</ion-button>
 
 
 </ion-content>
