--- a/src/app/pages/timelog/timelog.page.html
+++ b/src/app/pages/timelog/timelog.page.html
@@ -10,5 +10,10 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+        <ion-item *ngFor="let item of timeLogs">
+          <ion-label>{{item.date | date:'short' }}</ion-label>
+          <ion-label>{{item.duration }} mins</ion-label>
+        </ion-item>
+      </ion-list>
 </ion-content>
