--- a/src/app/pages/userlog/userlogdetail/userlogdetail.page.html
+++ b/src/app/pages/userlog/userlogdetail/userlogdetail.page.html
@@ -5,14 +5,16 @@
               
             </ion-menu-button>
           </ion-buttons>
-      <ion-title>Time Log</ion-title>
+      <ion-title>{{driver?.firstname}} {{driver?.lastname}}</ion-title>
     </ion-toolbar>
   </ion-header>
   
   <ion-content>
       <ion-list>
-          <ion-item *ngFor="let user of users">
-              <ion-label (click)="navigateToUserDetail(user)">{{user.firstname}} {{user.lastname}}</ion-label>
+          <ion-item *ngFor="let item of timeLogs">
+            <ion-label>{{item.date | date:'short' }}</ion-label>
+            <ion-label>{{item.duration }} mins</ion-label>
+            <ion-label>{{item.truck }} </ion-label>
           </ion-item>
         </ion-list>
   </ion-content>
