add trucklog page

--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -15,7 +15,7 @@
       <ion-card class="truck-card">
           <ion-card-header>
             <ion-card-subtitle>Today you are driving</ion-card-subtitle>
-            <ion-card-title>Rocla Super Truck 3000 {{user.truck}}</ion-card-title>
+            <ion-card-title>{{truck.name}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <p>Please check the vehicle for the following defects:</p>
