--- a/src/app/pages/userlog/userlog.page.html
+++ b/src/app/pages/userlog/userlog.page.html
@@ -5,7 +5,7 @@
               
             </ion-menu-button>
           </ion-buttons>
-      <ion-title>Time Log</ion-title>
+      <ion-title>User Time Log</ion-title>
     </ion-toolbar>
   </ion-header>
   
