--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -5,7 +5,7 @@
             <ion-icon slot="icon-only" name="ios-battery-charging"></ion-icon>
           </ion-button>
         </ion-buttons>
-        <ion-title>Hi {{user.firstname}},  please check your truck before you drive</ion-title>
+        <ion-title>Hi {{user.firstname}}</ion-title>
       </ion-toolbar>
 </ion-header>
 
