--- a/src/app/pages/precheck/precheck.page.scss
+++ b/src/app/pages/precheck/precheck.page.scss
@@ -1,5 +1,9 @@
 ion-content{
-    --background: #202020;
+    --background: #EFEFEF;
+}
+
+* {
+    font-size: 25px;
 }
 
 h1 {
@@ -10,6 +14,7 @@ h1 {
 
 ion-card {
     background-color: #f7f7f7;
+    font-size: 80px;
 }
 
 .truck-card {
@@ -22,11 +27,9 @@ ion-card {
 
 p {
     margin-bottom: 15px;
-    font-size: 15px;
+    font-size: 25px;
 }
 
-ion-button {
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 5%;
+ion-toolbar {
+    --min-height:60px;
 }
