update tutorial screen

--- a/src/app/pages/tutorial/tutorial.page.html
+++ b/src/app/pages/tutorial/tutorial.page.html
@@ -8,22 +8,25 @@
     <ion-slides pager="true" [options]="slideOpts">
         <ion-slide>
           <div>
-              <img src="../../../assets/lifttruck.png"/>
-              <h2>Hi, I'm Daisy, and I'm here to help you.</h2>
-              <p>First of all - after you log in and before you start driving, you need to check if the engine and fork of your truck are in a good condition. If there is anything else wrong with the truck, you can take note of that too.</p>
+              <p></p>
+              <h1>Hi - I'm Daisy, and I'm here to help you.</h1>
+              <img src="../../../assets/Daisy_Tutorial1.gif"/>
+              <p>First of all - after you have logged in, please complete the truck pre-check in order to confirm that various features of the truck are in proper working order. </p>
           </div>
         </ion-slide>
         <ion-slide>
             <div>
-                <img src="../../../assets/lifttruck.png"/>
-                <h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, .</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                <h2>Starting the Truck</h2>
+                <img src="../../../assets/Daisy_Tutorial2.gif"/>
+                <p style="font-size:small;">Video courtesy of Nissan</p>
+                <p>Once you have confirmed that it is safe to drive your Rocla forklift, please confirm that the select lever is placed in neutral position and the parking brake is set, as shown above. Then, insert the key into the keyswitch and start the engine.</p>
             </div>
         </ion-slide>
         <ion-slide>
             <div class="last-div">
-                <h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, .</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                <h2>During and After Your Ride</h2>
+                <p>Use the task list screen to receive instructions from your manager.</p>
+                <p>When it is time to dismount the forklift, apply the parking break and confirm the select lever is in neutral. Lastly, you can turn the key switch off and remove the key.</p>
                 <ion-button (click)="goToLogin()" expand="block">I'm ready to go!</ion-button>
             </div>
         </ion-slide>
