adjust login layout

--- a/src/app/pages/tutorial/tutorial.page.html
+++ b/src/app/pages/tutorial/tutorial.page.html
@@ -15,7 +15,7 @@
         </ion-slide>
         <ion-slide>
             <div>
-                <img src="../../../assets/lifttruck.png"/>
+                <img src="../../../assets/lifttruck2.jpeg"/>
                 <h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, .</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
             </div>
