add basic functionality to add images in precheck screen

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,8 +15,8 @@
         <ion-card-content>
           <div id="pin-input">
               <form [formGroup]="myForm">
-                  <ion-label position="floating">PIN</ion-label>
-                  <ion-input formControlName="pin" required="true" name="pin" placeholder="Please enter your PIN" autofocus="true" clear-input="true" maxlength="5"></ion-input>
+                  <ion-label position="floating">ID</ion-label>
+                  <ion-input formControlName="pin" required="true" name="pin" placeholder="Please enter your ID" autofocus="true" clear-input="true" maxlength="5"></ion-input>
               </form>
           </div>
          
