add truck overview screen

--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -33,6 +33,8 @@
           </ion-card-content>
         </ion-card>
 
+        <ion-button (click)="goToOrders()" expand="block">Ready to go</ion-button>
+
         <ion-card>
             <ion-item>
                 <ion-checkbox color="primary" slot="end"></ion-checkbox>
@@ -135,7 +137,4 @@
                         <ion-input placeholder="Please enter details" clear-input="true"></ion-input>
                     </ion-card-content>
                   </ion-card>
-
-                  <ion-button (click)="goToOrders()" expand="block">Continue</ion-button>
-
 </ion-content>
