--- a/src/app/pages/trucklog/trucklog.page.html
+++ b/src/app/pages/trucklog/trucklog.page.html
@@ -12,7 +12,7 @@
   <ion-content>
       <ion-list>
           <ion-item *ngFor="let truck of trucks">
-              <ion-label (click)="navigateToTruckDetail(truck)">{{truck.name}}</ion-label>
+              <ion-label (click)="navigateToTruckOverview(truck)">{{truck.name}}</ion-label>
           </ion-item>
         </ion-list>
   </ion-content>
