add truck confirmation screen and adjust pre-check screen

--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -10,5 +10,11 @@
 </ion-header>
 
 <ion-content>
-<p>You are ready to work!</p>
+    <ion-button expand="block">Report a problem</ion-button>
+    <ion-icon name="battery-full"></ion-icon>
+
+    <p>Pick up pallet EA392</p>
+    <p>Bring it to isle 45 shelf 75A</p>
+    <!--<ion-button color="danger" id="emergencyButton"expand="block">Emergency</ion-button>-->
+
 </ion-content>
