--- a/src/app/pages/precheck/precheck.page.scss
+++ b/src/app/pages/precheck/precheck.page.scss
@@ -6,9 +6,8 @@ ion-content{
     font-size: 25px;
 }
 
-h1 {
-    font-size: 80px;
-    color: #56A88A;
+h2 {
+    font-size: 0px;
     text-align: center
 }
 
@@ -34,13 +33,27 @@ ion-toolbar {
     --min-height:60px;
 }
 
-img {
-    max-height: 15%;
-    max-width: 15%;
+ion-title {
+    font-size: 25px;
+}
+
+#truckImage {
+    max-height: 5%;
+    max-width: 25%;
     margin: 20px;
 }
 
 ion-button{
     margin-left: 15px;
     margin-right: 15px;
+}
+
+.defectImage {
+    max-height: 1%;
+    max-width: 20%;
+    margin: 20px;
+}
+
+.container {
+    text-align: center;
 }
